fix wrapper padding on smaller devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,7 +40,13 @@ body {
 
 @media screen and (max-width: 1024px) {
   #wrapper {
-    width: 100%;
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #wrapper {
+    width: 90%;
   }
 }
 
